--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body {
   margin: 0 auto;
   aspect-ratio: 1/1 !important;
   background-color: #ffffff;
+
+  padding-bottom: 36px;
 }
 
 .gallery__container .swiper-slide {
